tree-sitter-p4/corpus/ParserDeclaration.txt
================================================================================
Parser without states
================================================================================

parser MyParser(packet_in packet,
                out headers hdr,
                inout metadata meta,
                inout standard_metadata_t standard_metadata) {
}

--------------------------------------------------------------------------------

(source_file
  (parserDeclaration
    (parserTypeDeclaration
      (name
        (IDENTIFIER))
      (parameterList
        (parameter
          (typeRef
            (typeName
              (prefixedType
                (IDENTIFIER))))
          (name
            (IDENTIFIER)))
        (parameter
          (typeRef
            (typeName
              (prefixedType
                (IDENTIFIER))))
          (name
            (IDENTIFIER)))
        (parameter
          (typeRef
            (typeName
              (prefixedType
                (IDENTIFIER))))
          (name
            (IDENTIFIER)))
        (parameter
          (typeRef
            (typeName
              (prefixedType
                (IDENTIFIER))))
          (name
            (IDENTIFIER)))))))

================================================================================
Parser with state
================================================================================

parser MyParser(packet_in packet,
                out headers hdr,
                inout metadata meta,
                inout standard_metadata_t standard_metadata) {

    state start {
        /* TODO: add parser logic */
        transition accept;
    }
}
--------------------------------------------------------------------------------

(source_file
  (parserDeclaration
    (parserTypeDeclaration
      (name
        (IDENTIFIER))
      (parameterList
        (parameter
          (typeRef
            (typeName
              (prefixedType
                (IDENTIFIER))))
          (name
            (IDENTIFIER)))
        (parameter
          (typeRef
            (typeName
              (prefixedType
                (IDENTIFIER))))
          (name
            (IDENTIFIER)))
        (parameter
          (typeRef
            (typeName
              (prefixedType
                (IDENTIFIER))))
          (name
            (IDENTIFIER)))
        (parameter
          (typeRef
            (typeName
              (prefixedType
                (IDENTIFIER))))
          (name
            (IDENTIFIER)))))
    (parserState
      (name
        (IDENTIFIER))
      (comment)
      (stateExpression
        (name
          (IDENTIFIER))))))
