tree-sitter-p4/corpus/VariableDeclarations.txt
================================================================================
header
================================================================================

header ipv4_t {
    bit<4>    version;
    bit<4>    ihl;
    bit<8>    diffserv;
    bit<16>   totalLen;
    bit<16>   identification;
    bit<3>    flags;
    bit<13>   fragOffset;
    bit<8>    ttl;
    bit<8>    protocol;
    bit<16>   hdrChecksum;
    ip4Addr_t srcAddr;
    ip4Addr_t dstAddr;
}

--------------------------------------------------------------------------------

(source_file
  (headerTypeDeclaration
    (name
      (IDENTIFIER))
    (structField
      (typeRef
        (baseType
          (INTEGER)))
      (name
        (IDENTIFIER)))
    (structField
      (typeRef
        (baseType
          (INTEGER)))
      (name
        (IDENTIFIER)))
    (structField
      (typeRef
        (baseType
          (INTEGER)))
      (name
        (IDENTIFIER)))
    (structField
      (typeRef
        (baseType
          (INTEGER)))
      (name
        (IDENTIFIER)))
    (structField
      (typeRef
        (baseType
          (INTEGER)))
      (name
        (IDENTIFIER)))
    (structField
      (typeRef
        (baseType
          (INTEGER)))
      (name
        (IDENTIFIER)))
    (structField
      (typeRef
        (baseType
          (INTEGER)))
      (name
        (IDENTIFIER)))
    (structField
      (typeRef
        (baseType
          (INTEGER)))
      (name
        (IDENTIFIER)))
    (structField
      (typeRef
        (baseType
          (INTEGER)))
      (name
        (IDENTIFIER)))
    (structField
      (typeRef
        (baseType
          (INTEGER)))
      (name
        (IDENTIFIER)))
    (structField
      (typeRef
        (typeName
          (prefixedType
            (IDENTIFIER))))
      (name
        (IDENTIFIER)))
    (structField
      (typeRef
        (typeName
          (prefixedType
            (IDENTIFIER))))
      (name
        (IDENTIFIER)))))

================================================================================
struct
================================================================================

struct headers {
    ethernet_t   ethernet;
    ipv4_t       ipv4;
}

--------------------------------------------------------------------------------

(source_file
  (structTypeDeclaration
    (name
      (IDENTIFIER))
    (structField
      (typeRef
        (typeName
          (prefixedType
            (IDENTIFIER))))
      (name
        (IDENTIFIER)))
    (structField
      (typeRef
        (typeName
          (prefixedType
            (IDENTIFIER))))
      (name
        (IDENTIFIER)))))

================================================================================
constant declarations
================================================================================

const bit<16> TYPE_IPV4 = 0x800;
const bit<16> TYPE_SRCROUTING = 0x1234;

--------------------------------------------------------------------------------

(source_file
  (constantDeclaration
    (typeRef
      (baseType
        (INTEGER)))
    (name
      (IDENTIFIER))
    (initializer
      (INTEGER)))
  (constantDeclaration
    (typeRef
      (baseType
        (INTEGER)))
    (name
      (IDENTIFIER))
    (initializer
      (INTEGER))))
